src/aks/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-backendend-poi-deployment
  namespace: tripinsights-backend
  labels:
    app: tripinsights-backend-poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-backend-poi
  template:
    metadata:
      labels:
        app: tripinsights-backend-poi
    spec:
      containers:
      - name: poi
        image: registryltt9233.azurecr.io/jordanbean/poi:1.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: tripinsights-backend-poi-service
  namespace: tripinsights-backend
spec:
  selector:
    app: tripinsights-backend-poi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
