src/aks/userprofile-jordanbean.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-backend-userprofile-deployment
  namespace: tripinsights-backend
  labels:
    app: tripinsights-backend-userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-backend-userprofile
  template:
    metadata:
      labels:
        app: tripinsights-backend-userprofile
    spec:
      containers:
      - name: userprofile
        image: registryltt9233.azurecr.io/jordanbean/userprofile:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripinsights-backend-userprofile-service
  namespace: tripinsights-backend
spec:
  selector:
    app: tripinsights-backend-userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
