src/aks/poi-jordanbean.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-backend-poi-deployment
  namespace: tripinsights-backend
  labels:
    app: tripinsights-backend-poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-backend-poi
  template:
    metadata:
      labels:
        app: tripinsights-backend-poi
    spec:
      containers:
      - name: poi
        image: registryltt9233.azurecr.io/jordanbean/poi:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripinsights-backend-poi-service
  namespace: tripinsights-backend
spec:
  selector:
    app: tripinsights-backend-poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripinsights-backend-poi-ingress
  namespace: tripinsights-backend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-tripinsights-rjb-secure.0c5da0aa7dac45c783b5.westus2.aksapp.io
    http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: tripinsights-backend-poi-service
            port:
              number: 80
