src/aks/trips-jordanbean.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-backend-trips-deployment
  namespace: tripinsights-backend
  labels:
    app: tripinsights-backend-trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-backend-trips
  template:
    metadata:
      labels:
        app: tripinsights-backend-trips
    spec:
      containers:
      - name: trips
        image: registryltt9233.azurecr.io/jordanbean/trips:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripinsights-backend-trips-service
  namespace: tripinsights-backend
spec:
  selector:
    app: tripinsights-backend-trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripinsights-backend-trips-ingress
  namespace: tripinsights-backend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-tripinsights-rjb-secure.0c5da0aa7dac45c783b5.westus2.aksapp.io
    http:
      paths:
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: tripinsights-backend-trips-service
            port:
              number: 80
