src/aks/tripviewer-jordanbean.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripinsights-frontendend-tripviewer-deployment
  namespace: tripinsights-frontend
  labels:
    app: tripinsights-frontend-tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripinsights-frontend-tripviewer
  template:
    metadata:
      labels:
        app: tripinsights-frontend-tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryltt9233.azurecr.io/jordanbean/tripviewer:1.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: tripinsights-frontend-tripviewer-service
  namespace: tripinsights-frontend
spec:
  selector:
    app: tripinsights-frontend-tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripinsights-frontend-tripviewer-ingress
  namespace: tripinsights-frontend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-tripinsights-rjb.f37c5b85287c4749a5f4.westus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripinsights-frontend-tripviewer-service
            port:
              number: 80
